# General-Cryptography-Scheme

./: .gitignore  CMakeLists.txt  LICENSE  README.md  assets.json  instruction.txt
C++/: CMakeLists.txt
C++/benchmark/: bench_ecc.cpp
C++/include/: base.h  kgc.h  process.h  utils.h
C++/src/: base.cpp
include/: accumulator.h  base.h  eccrypt.h  kgc.h  process.h  utils.h
java/LSSS_CPABE/: README.md
java/LSSS_CPABE/src/: CPABE.java  CPAPE.java  EnhancedRandom.java  FSCPABE.java  LSSS.java  Main.java  Pair.java  Scheme.java  Utils.java  logback.xml
python/: accmulator.py  assets.json  benchmark.py  entity.py  kgc.py  main.py  mcl-pairing.py  pairing-scheme.py  pbc-pairing.py  template.json  utils.py
python/pyecc/: demo.py  demo_pair.py
src/: accumulator.cpp  base.cpp  kgc.cpp  process.cpp  utils.cpp
test/: test_acc.cpp  test_ecc.cpp
